--- a/Maquetado/index.html
+++ b/Maquetado/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Portfolio - AP</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='normalize.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='queries.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='progress-bar.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='Maquetado/normalize.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='Maquetado/main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='Maquetado/queries.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='Maquetado/progress-bar.css'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -214,6 +214,6 @@
     banner__img.style.backgroundImage = "url('src/img/4.jpg')";
     banner__avatar.style.backgroundImage = "url('src/img/p1.jpg')";
 </script>
-<script src='main.js'></script>
+<script src='Maquetado/main.js'></script>
 
 </html>
