--- a/Maquetado/index.html
+++ b/Maquetado/index.html
@@ -211,8 +211,8 @@
     </footer>
 </body>
 <script>
-    banner__img.style.backgroundImage = "url('src/img/4.jpg')";
-    banner__avatar.style.backgroundImage = "url('src/img/p1.jpg')";
+    banner__img.style.backgroundImage = "url('Maquetado/src/img/4.jpg')";
+    banner__avatar.style.backgroundImage = "url('Maquetado/src/img/p1.jpg')";
 </script>
 <script src='Maquetado/main.js'></script>
 
