--- a/Maquetado/index.html
+++ b/Maquetado/index.html
@@ -15,7 +15,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
-    <script src="https://kit.fontawesome.com/435799fbae.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -58,61 +57,134 @@
                 <h1 class="fullname">Jhon Frederic Doe</h1>
                 <h2 class="title">Jr. Fullstack developer</h2>
             </div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente suscipit similique rem voluptas.
+                Accusamus alias temporibus optio dignissimos? Fugiat culpa, ad voluptate ipsam aliquid dignissimos
+                voluptatibus odio dolores veritatis qui.</p>
             <i class="fas fa-pencil-alt edit-btn"></i>
         </section>
 
         <section class="card" id="experience-section">
-            <h2>Experiencia...</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente suscipit similique rem voluptas.
-                Accusamus alias temporibus optio dignissimos? Fugiat culpa, ad voluptate ipsam aliquid dignissimos
-                voluptatibus odio dolores veritatis qui.</p>
+            <h2>Experiencia</h2>
+            <div class="item-container">
+                <div class="item">
+                    <div class="item-logo"></div>
+                    <div class="item-content">
+                        <h3>Gerente de producción</h3>
+                        <h4>Arcor</h4>
+                        <span>01/2014 - actualidad</span>
+                    </div>
+                    <i class="fas fa-pencil-alt edit-btn"></i>
+                </div>
+
+                <div class="item">
+                    <div class="item-logo"></div>
+                    <div class="item-content">
+                        <h3>Asistente ejecutivo</h3>
+                        <h4>Bologna SA</h4>
+                        <span>01/2011 - 12/2013</span>
+                    </div>
+                    <i class="fas fa-pencil-alt edit-btn"></i>
+                </div>
+
+                <div class="item">
+                    <div class="item-logo"></div>
+                    <div class="item-content">
+                        <h3>Gerente de producción</h3>
+                        <h4>Arcor</h4>
+                        <span>01/2014 - actualidad</span>
+                    </div>
+                    <i class="fas fa-pencil-alt edit-btn"></i>
+                </div>
+            </div>
             <i class="fas fa-pencil-alt edit-btn"></i>
         </section>
 
         <section class="card" id="education-section">
-            <h2>Educación...</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente suscipit similique rem voluptas.
-                Accusamus alias temporibus optio dignissimos? Fugiat culpa, ad voluptate ipsam aliquid dignissimos
-                voluptatibus odio dolores veritatis qui.</p>
-            <i class="fas fa-pencil-alt edit-btn"></i>
+            <h2>Educación</h2>
+            <div class="item-container">
+                <div class="item">
+                    <div class="item-logo"></div>
+                    <div class="item-content">
+                        <h3>Fullstack developer - NodeJs</h3>
+                        <h4>Dev School</h4>
+                        <span>oct-2016</span>
+                    </div>
+                    <i class="fas fa-pencil-alt edit-btn"></i>
+                </div>
+            </div>
         </section>
 
         <section class="card" id="skills-section">
-            <h2>Soft / hard skills...</h2>
+            <h2>Skills</h2>
             <div class="skills-container">
+                <div class="skill-card">
+                    <div role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="--value:95">
+                    </div>
+                    <span>
+                        Java
+                    </span>
+                </div>
+                <div class="skill-card">
+                    <div role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="--value:85">
+                    </div>
+                    <span>
+                        Javascript
+                    </span>
+                </div>
+                <div class="skill-card">
+                    <div role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="--value:70">
+                    </div>
+                    <span>
+                        NodeJs
+                    </span>
+                </div>
                 <div class="skill-card">
                     <div role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="--value:75">
                     </div>
                     <span>
-                        Comunicación 1
+                        Comunicación
                     </span>
                 </div>
                 <div class="skill-card">
                     <div role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="--value:80">
                     </div>
                     <span>
-                        Comunicación 2
+                        Trabajo en equipo
                     </span>
                 </div>
                 <div class="skill-card">
-                    <div role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="--value:32">
+                    <div role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="--value:45">
                     </div>
                     <span>
-                        Comunicación 3
+                        Resolución de conflictos
                     </span>
                 </div>
                 <div class="skill-card">
-                    <div role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="--value:46">
+                    <div role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="--value:45">
                     </div>
                     <span>
-                        Comunicación 4
+                        Flexibilidad
                     </span>
                 </div>
                 <div class="skill-card">
-                    <div role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="--value:5">
+                    <div role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="--value:50">
                     </div>
                     <span>
-                        Comunicación 5
+                        Resolución de problemas
+                    </span>
+                </div>
+                <div class="skill-card">
+                    <div role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="--value:40">
+                    </div>
+                    <span>
+                        Ingles
+                    </span>
+                </div>
+                <div class="skill-card">
+                    <div role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="--value:40">
+                    </div>
+                    <span>
+                        Italiano
                     </span>
                 </div>
             </div>
@@ -120,13 +192,21 @@
         </section>
 
         <section class="card" id="projects-section">
-            <h2>Proyectos...</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente suscipit similique rem voluptas.
-                Accusamus alias temporibus optio dignissimos? Fugiat culpa, ad voluptate ipsam aliquid dignissimos
-                voluptatibus odio dolores veritatis qui.</p>
+            <h2>Proyectos</h2>
+            <div class="item-container">
+                <div class="item">
+                    <div class="item-logo"></div>
+                    <div class="item-content">
+                        <h3>Mobile Weather App</h3>
+                        <h4>React Native</h4>
+                        <span>11/2021</span>
+                    </div>
+                    <i class="fas fa-pencil-alt edit-btn"></i>
+                </div>
+            </div>
             <i class="fas fa-pencil-alt edit-btn"></i>
         </section>
-        <section class="card">
+        <section class="card" hidden>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore
                 magna aliqua. Commodo quis imperdiet massa tincidunt. Aenean et tortor at risus viverra adipiscing at.
@@ -215,5 +295,6 @@
     </footer>
 </body>
 <script src='Maquetado/main.js'></script>
+<script src="https://kit.fontawesome.com/435799fbae.js" crossorigin="anonymous"></script>
 
 </html>
